# proofforge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  ruff.toml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  package.json  tsup.config.ts  vitest.config.ts
apps/api/src/: access.ts  app.ts  config.ts  deps.ts  errors.ts  events.ts  factory.ts  manifest.ts  observability.ts  server.ts  worker.ts
apps/api/src/plugins/: auth.ts
apps/api/src/routes/: analyses.ts  auth.ts  evidence-bundles.ts  github-webhook.ts  health.ts  metrics.ts  organizations.ts  policies.ts  repositories.ts
apps/api/src/services/: agent-review.ts  analysis-job.ts  analysis-runner.ts  checkout.ts  evidence-producer.ts  github-publisher.ts  policy-gate.ts
apps/api/test/: agent-review.test.ts  api.test.ts  config.test.ts  distributed.test.ts  evidence-pipeline.test.ts  github-publisher.test.ts  github-webhook.test.ts  helpers.ts  metrics.test.ts  policy-audit.test.ts  policy-gate.test.ts  redact.test.ts  runner.test.ts
apps/web/: Dockerfile  README.md  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/test/: api.test.ts  badges.test.tsx  format.test.ts
docs/: cli.md  evidence-spec.md  github-app.md  risk-score.md
docs/adr/: 0001-use-modular-monorepo.md  0002-use-typescript-and-python.md  0003-use-postgresql.md  0004-use-docker-sandbox.md  0005-version-evidence-manifest.md  0006-provider-agnostic-ai-layer.md  0007-zod-as-source-of-truth.md  0008-canonical-hashing-and-signature.md
infrastructure/docker/: sandbox-node.Dockerfile  sandbox-python.Dockerfile
policies/: default.yml  strict.yml
policies/default/: proofforge-policy.yml
scripts/: check-env.mjs  register-github-app.mjs
services/evidence-engine/: README.md  pyproject.toml
services/evidence-engine/src/proofforge_evidence/: __init__.py  changed_coverage.py  cli.py  context.py  diff.py  engine.py  manifest_builder.py  manifest_hash.py  models.py  risk.py  runners.py  sandbox.py  signing.py  toolchain.py  version.py  worktree.py
services/evidence-engine/src/proofforge_evidence/collectors/: __init__.py  benchmarks.py  migrations.py  parsers.py  quality.py
services/evidence-engine/tests/: conftest.py  doubles.py  test_benchmarks.py  test_changed_coverage.py  test_cross_language_hash.py  test_engine.py  test_migrations.py  test_parsers.py  test_quality.py  test_runners.py  test_sandbox.py  test_sandbox_wiring.py  test_signing.py
services/evidence-engine/tests/fixtures/: cobertura.xml  gitleaks.json  junit.xml  semgrep.json  syft.json  trivy.json
services/repository-analyzer/: README.md  pyproject.toml
services/repository-analyzer/src/proofforge_analyzer/: __init__.py  analyzer.py  cli.py  detectors.py  models.py  scanner.py  version.py
services/repository-analyzer/tests/: conftest.py  test_node_api.py  test_python_api.py  test_scanner_and_cli.py
services/repository-analyzer/tests/fixtures/node-api/: .env.example  Dockerfile  package.json
services/repository-analyzer/tests/fixtures/node-api/src/: index.js
services/repository-analyzer/tests/fixtures/node-api/test/: app.test.js
services/repository-analyzer/tests/fixtures/python-api/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
services/repository-analyzer/tests/fixtures/python-api/alembic/: env.py
(+12 files in other folders)
