[project]
name = "proofforge-services"
version = "0.1.0"
description = "ProofForge Python analysis services (repository-analyzer, evidence-engine)"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["services/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["services"]
