[project]
name = "proofforge-evidence-engine"
version = "0.1.0"
description = "ProofForge Evidence Engine — runs analysis in a sandbox and produces a signed proof-manifest."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.9",
    "cryptography>=44.0",
]

[project.scripts]
proofforge-evidence = "proofforge_evidence.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proofforge_evidence"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["proofforge_evidence"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["fixtures"]
